[package]
name = "p2p-chat"
version = "0.1.0"
edition = "2024"
authors = ["Ananya Addisu <sidraq@codeday.org>"]
description = "Secure P2P Encrypted LAN Chat Application"
license = "MIT"
repository = "https://github.com/Ananya-Addisu/p2p-chat"

[dependencies]
tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
ring = "0.17"
anyhow = "1.0"
console = "0.15"
futures = "0.3"
hex = "0.4"
thiserror = "1.0"
async-trait = "0.1"